<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application Label -->
    <string name="app_name">Controller</string>

    <string name="leader">Leader</string>

    <string name="reconnect">Reconnect</string>

    <string name="choose_leader">Choose Leader</string>
    <string name="choose_action">Choose Action</string>

    <string name="move">Move</string>
    <string name="change_formation">Change Formation</string>
    <string name="gather_data">Gather Data</string>

    <string name="straight">Straight</string>
    <string name="square">Square</string>
    <string name="diamond">Diamond</string>

    <string name="send_stuff">Send Stuff</string>
</resources>
