<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/fillParent">
    <LinearLayout
            style="@style/fillParentWidth"
            android:id="@+id/action_chooser_layout"
            android:layout_centerVertical="true">
        <TextView
                style="@style/headerTextView"
                android:text="@string/choose_action"
                android:id="@+id/choose_action_label_text_view"
                android:layout_marginTop="20dp"/>
        <Button
                style="@style/menuBtn"
                android:text="@string/move"
                android:id="@+id/move_button"/>
        <Button
                style="@style/menuBtn"
                android:text="@string/change_formation"
                android:id="@+id/change_formation_button"/>
        <Button
                style="@style/menuBtn"
                android:text="@string/gather_data"
                android:id="@+id/gather_data_button"/>
    </LinearLayout>

    <LinearLayout
            style="@style/fillParentWidth"
            android:layout_above="@id/action_chooser_layout">
        <TextView
                style="@style/headerTextView"
                android:text="@string/leader"
                android:id="@+id/leader_label_text_view"
                android:textSize="18dp"/>

        <TextView
                style="@style/headerTextView"
                android:text="-"
                android:id="@+id/leader_text_view"
                android:layout_marginTop="5dp"/>
        <Button
                style="@style/menuBtn"
                android:text="@string/choose_leader"
                android:id="@+id/choose_leader_button"/>
    </LinearLayout>

</RelativeLayout>

