<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:id="@+id/square_button"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:padding="20dp"/>

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/straight"
            android:id="@+id/straight_button"
            android:layout_above="@id/square_button"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:padding="20dp"/>

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/diamond"
            android:id="@+id/diamond_button"
            android:layout_below="@id/square_button"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:padding="20dp"/>
</RelativeLayout>